--- a/personal-journey-archive/index.html
+++ b/personal-journey-archive/index.html
@@ -1,33 +1,32 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>All Personal Journeys</title>
+  <title>Our Journeys</title>
   	<meta charset="utf-8">  
     <link href='./css/reset.css' media='all' rel='stylesheet' type='text/css' />
     <link href='./css/main.css' media='all' rel='stylesheet' type='text/css' />
+
   <style>
-    /* Your optional CSS styles go here */
   </style>
 </head>
 <body>
 	<div id="wrapper">
-		<div class="title">
-	  	<a href="chikh538.github.io/personal journey" class="names">Kristen Chik</a>
-	  	</div>
-	  	<a href="funge549.github.io/personal-journey" class="names">Evelin Fung</a>
-	  	<a href="garcv701.github.io/personal journey" class="names">Vincent Garcia</a>
-      <a href="" class="names">Yangchen Gruben</a>
-      <a href="esragumrukculer.github.io/week2" class="names">Esra Gumrukculer</a>
-      <a href="shutingguo.github.io/personal experience" class="names">Shuting Guo</a>
-      <a href="kayaa946.github.io/personal journey" class="names">Ayse Yaren Kaya</a>
-      <a href="khalp570.github.io/personaljourney" class="names">Prithi Khalique</a>
-      <a href="kims889.github.io/personaljourney" class="names">Soyeon Kim</a>
-      <a href="seowxx.github.io/2personaljourney" class="names">Seowon Kim</a>
-      <a href="leej312.github.io/Project_Lab/Personal Journey" class="names">Jahyun Lee</a>
-      <a href="lie771.github.io/personal-journey" class="names">Emily Li</a>
-      <a href="kmpnguyen0.github.io/Week 1 - Personal Journal" class="names">Khe Nguyen</a>
-      <a href="privv824.github.io/personal-journey" class="names">Vincent Privitera</a>
-      <a href="walde906.github.io/personal-journey" class="names">Emil Waldron</a>
-	  </div>
+    <h1 class="title">OUR <br>JOURNEYS</h1>
+		<div class="travel">
+      <a href="travel.html"><img class="travel1" src="./img/travel_logo.jpg"></a>
+    </div>
+    <div class="food">
+       <a href="food.html"><img class="food1" src="./img/food_logo.jpg"></a>
+    </div>
+    <div class="home">
+      <a href="home.html"><img class="home1" src="./img/home_logo.jpg"></a>
+    </div>
+    <div class ="lifestyle">
+       <a href="lifestyle.html"><img class="lifestyle1" src="./img/lifestyle_logo.jpg"></a>
+    </div>
+	  <div class ="missing">
+        <a href="missing.html"><img class="missing1" src="./img/missing_logo.jpg"></a>
+    </div>  
+	 </div>
 </body>
 </html>
