Missing Meta Tag

--- a/personal-journey-archive/missing.html
+++ b/personal-journey-archive/missing.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="UTF-8">
   <title>All Personal Journeys</title>
   	<meta charset="utf-8">  
     <link href='./css/reset.css' media='all' rel='stylesheet' type='text/css' />
