--- a/personal-journey-archive/lifestyle.html
+++ b/personal-journey-archive/lifestyle.html
@@ -11,7 +11,10 @@
   </style>
 </head>
 <body>
-	<a href="chikh538.github.io/personal journey"><img class="parsons" src="./img/parsons_logo.jpg"></a>
+<a href="index.html"><h1 class="title">OUR JOURNEYS</h1></a>
+	 <a href="https://yangmaya.github.io/Labs/Personal%20Journey/index.html"><img class="routine" src="./img/routine_logo.jpg"></a>
+  <p class="yangchen">Yangchen Gruben</p>
+  <a href="chikh538.github.io/personal journey"><img class="parsons" src="./img/parsons_logo.jpg"></a>
   <p class="kristen"> Kristen Chik</p>
   <a href="garcv701.github.io/personal journey"><img class="swim" src="./img/swim_logo.jpg"></a>
   <p class="vincentg">Vincent Garcia</p>
@@ -19,7 +22,7 @@
   <p class="prithi">Prithi Khalique</p>
     <a href="seowxx.github.io/2personaljourney"><img class="dog" src="./img/dog_logo.jpg"></a>
     <p class="seowon">Seowon Kim</p>
-    <a href="leej312.github.io/Project_Lab/Personal Journey"><img class="routine" src="./img/routine_logo.jpg"></a>
+    <a href="leej312.github.io/Project_Lab/Personal Journey"><img class="shower" src="./img/shower_logo.jpg"></a>
     <p class="jahyun">Jahyun Lee</p>
 </body>
 </html>
