--- a/personal-journey-archive/missing.html
+++ b/personal-journey-archive/missing.html
@@ -11,11 +11,10 @@
   </style>
 </head>
 <body>
-	<a href="" class="names"><img class="missing1" src="./img/missing_logo.jpg"></a>
-	<p class="yangchen">Yangchen Gruben</p>
-    <a href="privv824.github.io/personal-journey"><img class="missing2" src="./img/missing_logo.jpg"></a>
+<a href="index.html"><h1 class="title">OUR JOURNEYS</h1></a>
+    <img class="missing2" src="./img/missing_logo.jpg">
     <p class="vincentp">Vincent Privitera</p>
-    <a href="kayaa946.github.io/personal journey"><img class="missing3" src="./img/missing_logo.jpg"></a>
+    <img class="missing3" src="./img/missing_logo.jpg">
     <p class="yaren">Ayse Yaren Kaya</p>
 </body>
 </html>
