--- a/personal-journey-archive/travel.html
+++ b/personal-journey-archive/travel.html
@@ -11,6 +11,8 @@
   </style>
 </head>
 <body>
+<h1 class="title">OUR JOURNEYS</h1>
+<a href="index.html"><h1 class="title">OUR JOURNEYS</h1></a>
 	 <a href="funge549.github.io/personal-journey"><img class="costa" src="./img/costa_logo.jpg"></a>
 	<p class="evelin"> Evelin Fung</p>
       <a href="walde906.github.io/personal-journey"><img class="roadtrip" src="./img/roadtrip_logo.jpg"></a>
