--- a/personal-journey-archive/food.html
+++ b/personal-journey-archive/food.html
@@ -11,6 +11,7 @@
   </style>
 </head>
 <body>
+  <a href="index.html"><h1 class="title">OUR JOURNEYS</h1></a>
 	<a href="esragumrukculer.github.io/week2"><img class="yogurt" src="./img/yogurt_logo.jpg"></a>
 	<p class="esra">Esra Gumrukculer</p>
     <a href="kmpnguyen0.github.io/Week 1 - Personal Journal"><img class="hotpot" src="./img/hotpot_logo.jpg"></a>
