--- a/personal-journey-archive/home.html
+++ b/personal-journey-archive/home.html
@@ -11,6 +11,7 @@
   </style>
 </head>
 <body>
+<a href="index.html"><h1 class="title">OUR JOURNEYS</h1></a>
 	<a href="lie771.github.io/personal-journey" class="names"><img class="family" src="./img/family_logo.jpg"></a>
 	<p class="emily">Emily Li</p>
       <a href="shutingguo.github.io/personal experience" class="names"><img class="china" src="./img/china_logo.jpg"></a>
