--- a/personal-journey-archive/index.html
+++ b/personal-journey-archive/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 	<div id="wrapper">
-    <h1 class="title">OUR <br>JOURNEYS</h1>
+    <a href="index.html"><h1 class="title">OUR JOURNEYS</h1></a>
 		<div class="travel">
       <a href="travel.html"><img class="travel1" src="./img/travel_logo.jpg"></a>
     </div>
