--- a/personal-journey-archive/lifestyle.html
+++ b/personal-journey-archive/lifestyle.html
@@ -14,7 +14,7 @@
 <a href="index.html"><h1 class="title">OUR JOURNEYS</h1></a>
 	 <a href="https://yangmaya.github.io/Labs/Personal%20Journey/index.html"><img class="routine" src="./img/routine_logo.jpg"></a>
   <p class="yangchen">Yangchen Gruben</p>
-  <a href="chikh538.github.io/personal journey"><img class="parsons" src="./img/parsons_logo.jpg"></a>
+  <a href="https://chikh538.github.io/personal%20journey/index.html"><img class="parsons" src="./img/parsons_logo.jpg"></a>
   <p class="kristen"> Kristen Chik</p>
   <a href="garcv701.github.io/personal journey"><img class="swim" src="./img/swim_logo.jpg"></a>
   <p class="vincentg">Vincent Garcia</p>
