--- a/personal-journey-archive/travel.html
+++ b/personal-journey-archive/travel.html
@@ -13,11 +13,11 @@
 <body>
 <h1 class="title">OUR JOURNEYS</h1>
 <a href="index.html"><h1 class="title">OUR JOURNEYS</h1></a>
-	 <a href="funge549.github.io/personal-journey"><img class="costa" src="./img/costa_logo.jpg"></a>
+	 <a href="https://funge549.github.io/personal-journey/index.html"><img class="costa" src="./img/costa_logo.jpg"></a>
 	<p class="evelin"> Evelin Fung</p>
       <a href="walde906.github.io/personal-journey"><img class="roadtrip" src="./img/roadtrip_logo.jpg"></a>
 		<p class="emil"> Emil Waldron</p>
-      <a href="kims889.github.io/personaljourney"><img class="threetrip" src="./img/three_trip_logo.jpg"></a>
+      <a href="https://kims889.github.io/personaljourney/index.html"><img class="threetrip" src="./img/three_trip_logo.jpg"></a>
       <p class="soyeon"> Soyeon Kim</p>
 </body>
 </html>
