--- a/personal-journey-archive/food.html
+++ b/personal-journey-archive/food.html
@@ -12,9 +12,9 @@
 </head>
 <body>
   <a href="index.html"><h1 class="title">OUR JOURNEYS</h1></a>
-	<a href="esragumrukculer.github.io/week2"><img class="yogurt" src="./img/yogurt_logo.jpg"></a>
+	<a href="https://esragumrukculer.github.io/week2/index.html"><img class="yogurt" src="./img/yogurt_logo.jpg"></a>
 	<p class="esra">Esra Gumrukculer</p>
-    <a href="kmpnguyen0.github.io/Week 1 - Personal Journal"><img class="hotpot" src="./img/hotpot_logo.jpg"></a>
+    <a href="https://kmpnguyen0.github.io/Week%201%20-%20Personal%20Journal/persionaljournal.html"><img class="hotpot" src="./img/hotpot_logo.jpg"></a>
     <p class="khe">Khe Nguyen</p>
 </body>
 </html>
