Added Remaining Pages

--- a/click-click/index.html
+++ b/click-click/index.html
@@ -17,7 +17,7 @@
       <h1 class="author1"> Mohammad Ali </h1>
       <h1 class="username1"> @maglolz </h1>
       <h1 class="date1">4h5 hours ago</h1>
-      <a href="page2.html" ><p class="post1">Told my wife I wanted <span style="color:#FBFBFB;" ,>to go take </span> a <span style="color:#FBFBFB;" ,> romantic walk by the beach with her. Actually wanted to go see a </span> dead Whale <span style="color:#FBFBFB;" ,>I heard about on the news. </span> She was not happy. <span style="color:#FBFBFB;" ,>#awkwardmoment #notfunny</span>
+      <a href="page2.html" ><p class="post1">Told my wife I wanted <span class="post1hidden">to go take </span> a <span class="post1hidden"> romantic walk by the beach with her. Actually wanted to go see a </span> dead Whale <span class="post1hidden">I heard about on the news. </span> She was not happy. <span class="post1hidden">#awkwardmoment #notfunny</span>
       </p></a>
       <hr>
     </div>
@@ -26,7 +26,7 @@
       <h1 class="username2"> @AlanCarr </h1>
       <h1 class="date2">9h9 hours ago</h1>
       <a href="page3.html" class="page2link"><p class="post2">
-      <span style="color:#FBFBFB;" ,>Walking through Soho and </span> a woman <span style="color:#FBFBFB;" ,>sitting outside at a cafe just</span> put her hand out to see if it’s raining <span style="color:#FBFBFB;" ,>and cupped a</span> man<span style="color:#FBFBFB;" ,>s</span> balls.<span style="color:#FBFBFB;" ,> Both looked unimpressed. #awkward</span>
+      <span class="post2hidden">Walking through Soho and </span> a woman <span class="post2hidden">sitting outside at a cafe just</span> put her hand out to see if it’s raining <span class="post2hidden">and cupped a</span> man<span class="post2hidden">s</span> balls.<span class="post2hidden"> Both looked unimpressed. #awkward</span>
       </p></a>
       <hr>
     </div>
@@ -35,7 +35,7 @@
       <h1 class="username3"> @bobby_squad13 </h1>
       <h1 class="date3">13h2 hours ago</h1>
       <a href="page4.html" class="page2link"><p class="post3">
-      Just <span style="color:#FBFBFB;" ,>minding my own business, </span> waking up from a nap<span style="color:#FBFBFB;" ,>. Went to go knock on my roommates door </span>to see<span style="color:#FBFBFB;" ,> what he is up too. </span>A girl <span style="color:#FBFBFB;" ,>opens the door and says "he is at the store". Meanwhile I'm just</span> in my underwear. <span style="color:#FBFBFB;" ,>#awkwardmoment</span>
+      Just <span class="post3hidden"> minding my own business, </span> waking up from a nap<span class="post3hidden">. Went to go knock on my roommates door </span>to see<span class="post3hidden"> what he is up too. </span>A girl <span class="post3hidden">opens the door and says "he is at the store". Meanwhile I'm just</span> in my underwear. <span class="post3hidden">#awkwardmoment</span>
       </p></a>
       <hr>
     </div>
@@ -44,7 +44,7 @@
       <h1 class="username4"> @slayer666 </h1>
       <h1 class="date4">15h15 hours ago</h1>
       <a href="page5.html" class="page2link"><p class="post4">
-      <span style="color:#FBFBFB;" ,>The awkward moment</span>when u <span style="color:#FBFBFB;" ,>miscalculate where ur pockets are twice in a row when u try to put ur hands in them and</span> get embarrassed so u just say fuck <span style="color:#FBFBFB;" ,>it and pull</span> ur <span style="color:#FBFBFB;" ,>whole</span> dick <span style="color:#FBFBFB;" ,>out </span>
+      <span class="post4hidden">The awkward moment</span>when u <span class="post4hidden">miscalculate where ur pockets are twice in a row when u try to put ur hands in them and</span> get embarrassed so u just say fuck <<span class="post4hidden">it and pull</span> ur <span class="post4hidden">whole</span> dick <span class="post4hidden">out </span>
       </p></a>
       <hr >
     </div>
@@ -53,7 +53,7 @@
       <h1 class="username5"> @flagsam </h1>
       <h1 class="date5">Feb 6</h1>
       <a href="page6.html" class="page2link"><p class="post5">
-      One time <span style="color:#FBFBFB;" ,>I asked my friends who the</span> lost<span style="color:#FBFBFB;" ,> looking student was in the maths society room and was quickly informed he was</span> one of the lecturers. <span style="color:#FBFBFB;" ,>#AwkwardMoment</span></p></a>
+      One time <span class="post5hidden">I asked my friends who the</span> lost<span class="post5hidden"> looking student was in the maths society room and was quickly informed he was</span> one of the lecturers. <span class="post5hidden"> #AwkwardMoment</span></p></a>
       <hr>
     </div>
     <div class="ppost6">
@@ -93,7 +93,7 @@
       <h1 class="username10"> @BeatriceVenega2 </h1>
       <h1 class="date10">Jan 25</h1>
       <a href="page11.html" class="page2link"><p class="post10">
-      That<span style="color:#FBFBFB;" ,> awkward</span> moment when <span style="color:#FBFBFB;" ,> you're playing Cards Against Humanity with</span> your mom<span style="color:#FBFBFB;" ,> , and the card that has the word</span> queef<span style="color:#FBFBFB;" ,>  come</span>s<span style="color:#FBFBFB;" ,>  up and she ask you, "what the hell is a queef"? So you have to explain it to her and</span> she says <span style="color:#FBFBFB;" ,> "oh I didn't know it had a name" #awkwardmoment</span></p></a>
+      That<span style="color:#FBFBFB;" ,> awkward</span> moment when <span style="color:#FBFBFB;" ,> you're playing Cards Against Humanity with</span> your mom<span style="color:#FBFBFB;" ,> , and the card that has the word</span> queef<span style="color:#FBFBFB;" ,>  come</span>s<span style="color:#FBFBFB;" ,>  up and she ask you, "what the hell is a queef"? So you have to explain it to her and she says "oh I didn't know it had a name" #awkwardmoment</span></p></a>
       <hr>
     </div>
     <div class="ppost11">
