--- a/click-click/page2.html
+++ b/click-click/page2.html
@@ -10,23 +10,19 @@
   </style>
 </head>
 <body> 
-<div class="whitebox"></div>
-<!--   <a href="page3.html"><p class="arrowdown">&#8897;</p></a> -->
   <a href="page3.html" class="arrowdown">&#8897;</a>
-<!--   <p class="arrowup">&#8896;</p> -->
-<!-- <a href="index.html" class="arrowup">&#8896;</a> -->
   <a href="index.html" class="home">#AwkwardMoment</a> 
-<!--   <a href="page3.html" class="down"><i class="arrow down"></i></a> -->
     <h1 class="authormainpost1">Mohammad Ali</h1>
     <h2 class="usernamemainpost1">@maglolz</h2>
     <h3 class="datemainpost1">4h5 hours ago</h3>
-    <p class="mainpost1">Told my wife I wanted to go take a romantic walk by the beach with her. Actually wanted to go see a dead Whale I heard about on the news. She was not happy. #awkwardmoment #notfunny
+    <p class="mainpost1">
+    Told my wife I wanted <span class="mainpost1hidden">to go take </span> a <span class="mainpost1hidden"> romantic walk by the beach with her. Actually wanted to go see a </span> dead Whale <span class="mainpost1hidden">I heard about on the news. </span> She was not happy. <span class="mainpost1hidden">#awkwardmoment #notfunny</span>
   </p>
-  <div class="rectangle">
+<!--   <div class="rectangle">
     <div class="rectangle1"></div>
     <div class="rectangle2"></div>
     <div class="rectangle3"></div>
-  </div>
+  </div> -->
 
 </body>
 </html>
