--- a/click-click/page4.html
+++ b/click-click/page4.html
@@ -10,20 +10,14 @@
   </style>
 </head>
 <body>
-  <div class="whitebox"></div>  
   <a href="index.html" class="home">#AwkwardMoment</a>  
   <a href="page3.html" class="arrowup">&#8896;</a> 
   <a href="page5.html" class="arrowdown">&#8897;</a>
 
     <h1 class="authormainpost1">Robert Johnson</h1>
-    <h2 class="usernamemainpost3">@bobby_squad13</h2>
+    <h2 class="usernamemainpost7">@bobby_squad13</h2>
     <h3 class="datemainpost1">13h2 hours ago</h3>
-    <p class="mainpost1">Just minding my own business, waking up from a nap. Went to go knock on my roommates door to see what he is up too. A girl opens the door and says "he is at the store". Mean-<br>while I'm just in my underwear. #awkwardmoment
+    <p class="mainpost1"> Just <span class="mainpost1hidden"> minding my own business, </span> waking up from a nap<span class="mainpost1hidden">. Went to go knock on my roommates door </span>to see<span class="mainpost1hidden"> what he is up too. </span>A girl <span class="mainpost1hidden">opens the door and says "he is at the store". Meanwhile I'm just</span> in my underwear. <span class="mainpost1hidden">#awkwardmoment</span>
     </p>
-  <div class="rectangle">
-    <!-- <div class="rectangle5"></div> -->
-    <div class="rectangle2"></div>
-    <div class="rectangle3"></div>
-  </div>
 </body>
 </html>
