--- a/click-click/page5.html
+++ b/click-click/page5.html
@@ -10,7 +10,6 @@
   </style>
 </head>
 <body>
-  <div class="whitebox"></div>  
   <a href="index.html" class="home">#AwkwardMoment</a>  
   <a href="page4.html" class="arrowup">&#8896;</a> 
   <a href="page6.html" class="arrowdown">&#8897;</a>
@@ -18,14 +17,7 @@
     <h1 class="authormainpost1">^_^</h1>
     <h2 class="usernamemainpost4">@BBWslayer666</h2>
     <h3 class="datemainpost1">15h15 hours ago</h3>
-    <p class="mainpost1">The awkward moment when u miscalculate where ur <br>pockets are twice in a row when u try to put ur hands in <br>them and get embarrassed so u just say fuck it and pull ur whole dick out. #awkwardmoment
-
-    </p>
-  <div class="rectangle">
-    <!-- <div class="rectangle5"></div> -->
-    
-    <div class="rectangle3"></div>
-    <div class="rectangle6"></div>
-  </div>
+    <p class="mainpost1"><span class="mainpost1hidden">The awkward moment</span>when u <span class="mainpost1hidden">miscalculate where ur pockets are twice in a row when u try to put ur hands in them and</span> get embarrassed so u just say fuck <span class="mainpost1hidden">it and pull</span> ur <span class="mainpost1hidden">whole</span> dick <span class="mainpost1hidden">out </span>
+      </p>
 </body>
 </html>
