--- a/click-click/page9.html
+++ b/click-click/page9.html
@@ -18,13 +18,7 @@
     <h1 class="authormainpost1">Kristan Creasy</h1>
     <h2 class="usernamemainpost6">@KristanCreasy</h2>
     <h3 class="datemainpost1">Feb 2</h3>
-    <p class="mainpost1">Trying to have a conversation with my boss and he starts drinking his coffee from the side of his mouth with the rim of the paper cup folded to a point. It threw me off so much that I just stopped talking and walked away. #AwkwardMoment
+    <p class="mainpost1"><span class="mainpost1hidden">Trying to have a conversation with</span> my boss<span class="mainpost1hidden"> and he starts drinking his coffee from the side of his mouth with the rim of the paper cup folded to a point. It </span>threw me <span class="mainpost1hidden">off so much that I just stopped talking and walked </span>away.<span class="mainpost1hidden"> #AwkwardMoment</span></p>
     </p>
-  <div class="rectangle">
-    <div class="rectangle01"></div>
-    <div class="rectangle5"></div>
-    <div class="rectangle7"></div>
-    <div class="rectangle3"></div>
-  </div>
 </body>
 </html>
