--- a/click-click/page11.html
+++ b/click-click/page11.html
@@ -10,7 +10,6 @@
   </style>
 </head>
 <body>
-  <div class="whitebox"></div>  
   <a href="index.html" class="home">#AwkwardMoment</a>  
   <a href="page10.html" class="arrowup">&#8896;</a> 
   <a href="page12.html" class="arrowdown">&#8897;</a>
@@ -18,14 +17,7 @@
     <h1 class="authormainpost1">Beatrice Venegas</h1>
     <h2 class="usernamemainpost6">@BeatriceVenega2</h2>
     <h3 class="datemainpost1">Jan 25</h3>
-    <p class="mainpost1">That awkward moment when you're playing Cards Against Humanity with your mom, and the card that has the word queef comes up and she ask you, "what the hell is a queef"? So you have to explain it to her and she says "oh I didn't know it had a name" #awkwardmoment
-    </p>
-  <div class="rectangle">
-<!--     <div class="rectangle01"></div> -->
-    <div class="rectangle13"></div>
-    <div class="rectangle7"></div>
-    <div class="rectangle3"></div>
-    <div class="rectangle12"></div>
-  </div>
+    <p class="mainpost1">
+    That<span class="mainpost1hidden"> awkward</span> moment when <span class="mainpost1hidden"> you're playing Cards Against Humanity with</span> your mom<span class="mainpost1hidden"> , and the card that has the word</span> queef<span class="mainpost1hidden">  come</span>s<span class="mainpost1hidden">  up and she ask you, "what the hell is a queef"? So you have to explain it to her and she says "oh I didn't know it had a name" #awkwardmoment</span></p>
 </body>
 </html>
