--- a/click-click/page12.html
+++ b/click-click/page12.html
@@ -10,7 +10,6 @@
   </style>
 </head>
 <body>
-  <div class="whitebox"></div>  
   <a href="index.html" class="home">#AwkwardMoment</a>  
   <a href="page11.html" class="arrowup">&#8896;</a> 
   <a href="page13.html" class="arrowdown">&#8897;</a>
@@ -18,15 +17,6 @@
     <h1 class="authormainpost1">Nikolas Romero</h1>
     <h2 class="usernamemainpost6">@niko19romero</h2>
     <h3 class="datemainpost1">Jan 23</h3>
-    <p class="mainpost1">That awkward moment when you’re walking around naked <br>at your own house and you forget there is a glass window at your front door and the ups delivery guy makes eye contact with you while putting down the package.
-
-    </p>
-  <div class="rectangle">
-<!--     <div class="rectangle01"></div> -->
-    <div class="rectangle14"></div>
-    <div class="rectangle7"></div>
-    <div class="rectangle3"></div>
-
-  </div>
+    <p class="mainpost1"><span class="mainpost1hidden">That awkward moment when you’re</span> walking around <span class="mainpost1hidden">naked at your own house and you forget there is a glass window at your front door and</span> the ups delivery guy<span class="mainpost1hidden"> makes eye contact</span> with<span class="mainpost1hidden"> you while putting down</span> the package.</p>
 </body>
 </html>
