--- a/click-click/page6.html
+++ b/click-click/page6.html
@@ -10,7 +10,6 @@
   </style>
 </head>
 <body>
-  <div class="whitebox"></div>  
   <a href="index.html" class="home">#AwkwardMoment</a>  
   <a href="page5.html" class="arrowup">&#8896;</a> 
   <a href="page7.html" class="arrowdown">&#8897;</a>
@@ -18,11 +17,6 @@
     <h1 class="authormainpost1">Aoife Nolan</h1>
     <h2 class="usernamemainpost5">@flagsam</h2>
     <h3 class="datemainpost1">Feb 26 </h3>
-    <p class="mainpost1">One time I asked my friends who the lost looking student<br> was in the maths society room and was quickly informed he was one of the lecturers. #AwkwardMoment
-    </p>
-  <div class="rectangle">
-    <div class="rectangle8"></div>
-    <div class="rectangle7"></div>
-  </div>
+    <p class="mainpost1"> One time <span class="mainpost1hidden">I asked my friends who the</span> lost<span class="mainpost1hidden"> looking student was in the maths society room and was quickly informed he was</span> one of the lecturers. <span class="mainpost1hidden"> #AwkwardMoment</span></p>
 </body>
 </html>
