--- a/click-click/page7.html
+++ b/click-click/page7.html
@@ -10,7 +10,6 @@
   </style>
 </head>
 <body>
-  <div class="whitebox"></div>  
   <a href="index.html" class="home">#AwkwardMoment</a>  
   <a href="page6.html" class="arrowup">&#8896;</a> 
   <a href="page8.html" class="arrowdown">&#8897;</a>
@@ -18,11 +17,7 @@
     <h1 class="authormainpost1">biscuit brian</h1>
     <h2 class="usernamemainpost5">@BrianSeanster</h2>
     <h3 class="datemainpost1">Feb 6</h3>
-    <p class="mainpost1">That #awkwardmoment when you think you’re alone in the work bathroom so you start dancing in the mirror and it turns out you weren’t alone
-    </p>
-  <div class="rectangle">
-    <div class="rectangle9"></div>
-    <div class="rectangle7"></div>
-  </div>
+    <p class="mainpost1">
+     <span class="mainpost1hidden">That #awkwardmoment</span> when <span class="mainpost1hidden">you think </span>you’re a<span class="mainpost1hidden">lone in the work</span> bathroom so you start dancing <span class="mainpost1hidden">in the mirror and it turns out you weren’t alone.</span></p>
 </body>
 </html>
