--- a/click-click/page8.html
+++ b/click-click/page8.html
@@ -10,19 +10,13 @@
   </style>
 </head>
 <body>
-  <div class="whitebox"></div>  
   <a href="index.html" class="home">#AwkwardMoment</a>  
   <a href="page7.html" class="arrowup">&#8896;</a> 
   <a href="page9.html" class="arrowdown">&#8897;</a>
-
     <h1 class="authormainpost1">Jollene De Vera</h1>
     <h2 class="usernamemainpost6">@jaydi_vera</h2>
     <h3 class="datemainpost1">Feb 4</h3>
-    <p class="mainpost1">That #awkwardMoment when someone you know waves at you so you wave back then they go to you to start a convo but all you wanted to do was wave and jet
-    </p>
-  <div class="rectangle">
-    <div class="rectangle8"></div>
-    <div class="rectangle7"></div>
-  </div>
+    <p class="mainpost1">
+     <span class="mainpost1hidden">That #awkwardMoment</span> when <span class="mainpost1hidden"> someone</span> you <span class="mainpost1hidden">know waves at you so you wave back then they go to you to</span> start a convo <span class="mainpost1hidden">but all</span> you <span class="mainpost1hidden">wanted to do was wave and </span>jet.</p>
 </body>
 </html>
