--- a/click-click/index.html
+++ b/click-click/index.html
@@ -11,13 +11,16 @@
   </style>
 </head>
 <body>
-  <a href="index.html" class="home">#AwkwardMoment</a> 
+    <a href="index.html" class="home">#AwkwardMoment</a> 
+ <!--    <div class="shape">
+    </div> -->
+    <p class="about"> from live Twitter posts <br>that makes you feel like <br>crawling into a hole</p>
   <div class="bodycontent">
     <div class="ppost1">
       <h1 class="author1"> Mohammad Ali </h1>
       <h1 class="username1"> @maglolz </h1>
       <h1 class="date1">4h5 hours ago</h1>
-      <a href="page2.html" ><p class="post1">Told my wife I wanted <span class="post1hidden">to go take </span> a <span class="post1hidden"> romantic walk by the beach with her. Actually wanted to go see a </span> dead Whale <span class="post1hidden">I heard about on the news. </span> She was not happy. <span class="post1hidden">#awkwardmoment #notfunny</span>
+      <a href="page2.html" ><p class="post1">Told my wife I wanted <span class="post1hidden">to go take </span> a <span class="post1hidden"> romantic walk by the beach with her. Actually wanted to go see a </span> dead whale <span class="post1hidden">I heard about on the news. </span> She was not happy. <span class="post1hidden">#awkwardmoment #notfunny</span>
       </p></a>
       <hr>
     </div>
@@ -26,7 +29,7 @@
       <h1 class="username2"> @AlanCarr </h1>
       <h1 class="date2">9h9 hours ago</h1>
       <a href="page3.html" class="page2link"><p class="post2">
-      <span class="post2hidden">Walking through Soho and </span> a woman <span class="post2hidden">sitting outside at a cafe just</span> put her hand out to see if it’s raining <span class="post2hidden">and cupped a</span> man<span class="post2hidden">s</span> balls.<span class="post2hidden"> Both looked unimpressed. #awkward</span>
+      <span class="post2hidden">Walking through Soho and </span> a woman <span class="post2hidden">sitting outside at a cafe just</span> put her hand out to see if it’s raining <span class="post2hidden">and cupped a</span> man<span class="post2hidden">s</span> balls.<span class="post2hidden"> But looked unimpressed. #awkward</span>
       </p></a>
       <hr>
     </div>
@@ -44,7 +47,7 @@
       <h1 class="username4"> @slayer666 </h1>
       <h1 class="date4">15h15 hours ago</h1>
       <a href="page5.html" class="page2link"><p class="post4">
-      <span class="post4hidden">The awkward moment</span>when u <span class="post4hidden">miscalculate where ur pockets are twice in a row when u try to put ur hands in them and</span> get embarrassed so u just say fuck <<span class="post4hidden">it and pull</span> ur <span class="post4hidden">whole</span> dick <span class="post4hidden">out </span>
+      <span class="post4hidden">The awkward moment</span>when u <span class="post4hidden">miscalculate where ur pockets are twice in a row when u try to put ur hands in them and</span> get embarrassed so u just say fuck <span class="post4hidden">it and pull</span> ur <span class="post4hidden">whole</span> dick <span class="post4hidden">out </span>
       </p></a>
       <hr >
     </div>
