--- a/click-click/page10.html
+++ b/click-click/page10.html
@@ -13,8 +13,7 @@
   <a href="index.html" class="home">#AwkwardMoment</a>  
   <a href="page9.html" class="arrowup">&#8896;</a> 
   <a href="page11.html" class="arrowdown">&#8897;</a>
-
-    <h1 class="authormainpost1">Rob Roselli</h1>
+    <a href="https://twitter.com/cam3raface" class="authormainpost1">Rob Roselli</a>
     <h2 class="usernamemainpost5">@cam3raface</h2>
     <h3 class="datemainpost1">Feb1</h3>
     <p class="mainpost1"><span class="mainpost1hidden">Had one headphone in and thought I heard the</span> Walgreens cashier ask me to <span class="mainpost1hidden">join their rewards program but she said “enjoy your night” but I</span> look<span class="mainpost1hidden">ed</span> her in the eyes<span class="mainpost1hidden"> and said “not today, thanks”</span> and walk<span class="mainpost1hidden">ed</span> out.<span class="mainpost1hidden"> #awkwardmoment #thisismylife</span></p>
