--- a/click-click/page11.html
+++ b/click-click/page11.html
@@ -14,8 +14,8 @@
   <a href="page10.html" class="arrowup">&#8896;</a> 
   <a href="page12.html" class="arrowdown">&#8897;</a>
 
-    <h1 class="authormainpost1">Beatrice Venegas</h1>
-    <h2 class="usernamemainpost6">@BeatriceVenega2</h2>
+    <a href="https://twitter.com/BeatriceVenega2" class="authormainpost1">Beatrice Venegas</a>
+    <h2 class="usernamemainpost7">@BeatriceVenega2</h2>
     <h3 class="datemainpost1">Jan 25</h3>
     <p class="mainpost1">
     That<span class="mainpost1hidden"> awkward</span> moment when <span class="mainpost1hidden"> you're playing Cards Against Humanity with</span> your mom<span class="mainpost1hidden"> , and the card that has the word</span> queef<span class="mainpost1hidden">  come</span>s<span class="mainpost1hidden">  up and she ask you, "what the hell is a queef"? So you have to explain it to her and she says "oh I didn't know it had a name" #awkwardmoment</span></p>
