--- a/click-click/page12.html
+++ b/click-click/page12.html
@@ -14,7 +14,7 @@
   <a href="page11.html" class="arrowup">&#8896;</a> 
   <a href="page13.html" class="arrowdown">&#8897;</a>
 
-    <h1 class="authormainpost1">Nikolas Romero</h1>
+    <a href="https://twitter.com/niko19romero" class="authormainpost1">Nikolas Romero</a>
     <h2 class="usernamemainpost6">@niko19romero</h2>
     <h3 class="datemainpost1">Jan 23</h3>
     <p class="mainpost1"><span class="mainpost1hidden">That awkward moment when you’re</span> walking around <span class="mainpost1hidden">naked at your own house and you forget there is a glass window at your front door and</span> the ups delivery guy<span class="mainpost1hidden"> makes eye contact</span> with<span class="mainpost1hidden"> you while putting down</span> the package.</p>
