--- a/click-click/page13.html
+++ b/click-click/page13.html
@@ -14,7 +14,7 @@
   <a href="page12.html" class="arrowup">&#8896;</a> 
   <a href="page14.html" class="arrowdown">&#8897;</a>
 
-    <h1 class="authormainpost1">Gabriel Nkuna</h1>
+    <a href="https://twitter.com/gabrielnkuna" class="authormainpost1">Gabriel Nkuna</a>
     <h2 class="usernamemainpost6">@gabrielnkuna</h2>
     <h3 class="datemainpost1">Jan 17</h3>
     <p class="mainpost1">
