--- a/click-click/page14.html
+++ b/click-click/page14.html
@@ -14,7 +14,7 @@
   <a href="page13.html" class="arrowup">&#8896;</a> 
   <a href="page15.html" class="arrowdown">&#8897;</a>
 
-    <h1 class="authormainpost1"> Alex Thornhill </h1>
+    <a href="https://twitter.com/thornberryalex" class="authormainpost1"> Alex Thornhill </a>
     <h2 class="usernamemainpost6">@thornberryalex</h2>
     <h3 class="datemainpost1">Dec 29</h3>
     <p class="mainpost1">
