--- a/click-click/page15.html
+++ b/click-click/page15.html
@@ -14,8 +14,8 @@
   <a href="page14.html" class="arrowup">&#8896;</a> 
   <a href="page16.html" class="arrowdown">&#8897;</a>
 
-    <h1 class="authormainpost1">Francisco Verdinez</h1>
-    <h2 class="usernamemainpost6">@ElDoucheFrankie</h2>
+    <a href="https://twitter.com/ElDoucheFrankie" class="authormainpost1">Francisco Verdinez</a>
+    <h2 class="usernamemainpost7">@ElDoucheFrankie</h2>
     <h3 class="datemainpost1">Dec 28</h3>
     <p class="mainpost1">
     <span class="mainpost1hidden">That awkward moment. Me: "Hey how have </span>you  <span class="mainpost1hidden">been?" Them: "</span>Divorced <span class="mainpost1hidden">, hbu</span>? <span class="mainpost1hidden">" Me: " I gotta go..." </span>Lol  <span class="mainpost1hidden">#</span>awkward <span class="mainpost1hidden">moment #bartalk</span></p>
