--- a/click-click/page16.html
+++ b/click-click/page16.html
@@ -14,7 +14,7 @@
   <a href="page15.html" class="arrowup">&#8896;</a> 
   <a href="page17.html" class="arrowdown">&#8897;</a>
 
-    <h1 class="authormainpost1">Chasing Holiness</h1>
+    <a href="https://twitter.com/sitlausdeo" class="authormainpost1">Chasing Holiness</a>
     <h2 class="usernamemainpost7">@sitlausdeo</h2>
     <h3 class="datemainpost1">Dec 7</h3>
     <p class="mainpost1">
