--- a/click-click/page18.html
+++ b/click-click/page18.html
@@ -14,7 +14,7 @@
   <a href="page17.html" class="arrowup">&#8896;</a> 
   <a href="page19.html" class="arrowdown">&#8897;</a>
 
-    <h1 class="authormainpost1">freelancer</h1>
+    <a href="https://twitter.com/azadpanchi08" class="authormainpost1">freelancer</a>
     <h2 class="usernamemainpost5">@azadpanchi08</h2>
     <h3 class="datemainpost1">Dec 6</h3>
     <p class="mainpost1">
