--- a/click-click/page2.html
+++ b/click-click/page2.html
@@ -12,11 +12,11 @@
 <body> 
   <a href="page3.html" class="arrowdown">&#8897;</a>
   <a href="index.html" class="home">#AwkwardMoment</a> 
-    <h1 class="authormainpost1">Mohammad Ali</h1>
+    <a href="https://twitter.com/maglolz" class="authormainpost1">Mohammad Ali</a>
     <h2 class="usernamemainpost1">@maglolz</h2>
     <h3 class="datemainpost1">4h5 hours ago</h3>
     <p class="mainpost1">
-    Told my wife I wanted <span class="mainpost1hidden">to go take </span> a <span class="mainpost1hidden"> romantic walk by the beach with her. Actually wanted to go see a </span> dead Whale <span class="mainpost1hidden">I heard about on the news. </span> She was not happy. <span class="mainpost1hidden">#awkwardmoment #notfunny</span>
+    Told my wife I wanted <span class="mainpost1hidden">to go take </span> a <span class="mainpost1hidden"> romantic walk by the beach with her. Actually wanted to go see a </span> dead whale <span class="mainpost1hidden">I heard about on the news. </span> She was not happy. <span class="mainpost1hidden">#awkwardmoment #notfunny</span>
   </p>
 <!--   <div class="rectangle">
     <div class="rectangle1"></div>
