--- a/click-click/page3.html
+++ b/click-click/page3.html
@@ -13,11 +13,11 @@
   <a href="page4.html" class="arrowdown">&#8897;</a>
   <a href="page2.html" class="arrowup">&#8896;</a> 
   <a href="index.html" class="home">#AwkwardMoment</a> 
-    <h1 class="authormainpost1">Alan Carr</h1>
+    <a href="https://twitter.com/AlanCarr" class="authormainpost1">Alan Carr</a>
     <h2 class="usernamemainpost2">@AlanCarr</h2>
     <h3 class="datemainpost1">9h9 hours ago</h3>
     <p class="mainpost1">
-    Walking through Soho and </span> a woman <span class="mainpost1hidden">sitting outside at a cafe just</span> put her hand out to see if it’s raining <span class="mainpost1hidden">and cupped a</span> man<span class="mainpost1hidden">s</span> balls.<span class="mainpost1hidden"> Both looked unimpressed. #awkward</span>
+    <span class="mainpost1hidden">Walking through Soho and </span> a woman <span class="mainpost1hidden">sitting outside at a cafe just</span> put her hand out to see if it’s raining <span class="mainpost1hidden">and cupped a</span> man<span class="mainpost1hidden">s</span> balls.<span class="mainpost1hidden"> But looked unimpressed. #awkward</span>
     
     </p>
 </body>
