--- a/click-click/page6.html
+++ b/click-click/page6.html
@@ -14,7 +14,7 @@
   <a href="page5.html" class="arrowup">&#8896;</a> 
   <a href="page7.html" class="arrowdown">&#8897;</a>
 
-    <h1 class="authormainpost1">Aoife Nolan</h1>
+    <a href="https://twitter.com/Flagsam" class="authormainpost1">Aoife Nolan</a>
     <h2 class="usernamemainpost5">@flagsam</h2>
     <h3 class="datemainpost1">Feb 26 </h3>
     <p class="mainpost1"> One time <span class="mainpost1hidden">I asked my friends who the</span> lost<span class="mainpost1hidden"> looking student was in the maths society room and was quickly informed he was</span> one of the lecturers. <span class="mainpost1hidden"> #AwkwardMoment</span></p>
