--- a/click-click/page7.html
+++ b/click-click/page7.html
@@ -14,7 +14,7 @@
   <a href="page6.html" class="arrowup">&#8896;</a> 
   <a href="page8.html" class="arrowdown">&#8897;</a>
 
-    <h1 class="authormainpost1">biscuit brian</h1>
+    <a href="https://twitter.com/BrianSeanster" class="authormainpost1">biscuit brian</a>
     <h2 class="usernamemainpost5">@BrianSeanster</h2>
     <h3 class="datemainpost1">Feb 6</h3>
     <p class="mainpost1">
