--- a/click-click/page8.html
+++ b/click-click/page8.html
@@ -13,7 +13,7 @@
   <a href="index.html" class="home">#AwkwardMoment</a>  
   <a href="page7.html" class="arrowup">&#8896;</a> 
   <a href="page9.html" class="arrowdown">&#8897;</a>
-    <h1 class="authormainpost1">Jollene De Vera</h1>
+    <a href="https://twitter.com/jaydi_vera" class="authormainpost1">Jollene De Vera</a>
     <h2 class="usernamemainpost6">@jaydi_vera</h2>
     <h3 class="datemainpost1">Feb 4</h3>
     <p class="mainpost1">
