--- a/click-click/page9.html
+++ b/click-click/page9.html
@@ -10,12 +10,11 @@
   </style>
 </head>
 <body>
-  <div class="whitebox"></div>  
   <a href="index.html" class="home">#AwkwardMoment</a>  
   <a href="page8.html" class="arrowup">&#8896;</a> 
   <a href="page10.html" class="arrowdown">&#8897;</a>
 
-    <h1 class="authormainpost1">Kristan Creasy</h1>
+    <a href="https://twitter.com/KristanCreasy" class="authormainpost1">Kristan Creasy</a>
     <h2 class="usernamemainpost6">@KristanCreasy</h2>
     <h3 class="datemainpost1">Feb 2</h3>
     <p class="mainpost1"><span class="mainpost1hidden">Trying to have a conversation with</span> my boss<span class="mainpost1hidden"> and he starts drinking his coffee from the side of his mouth with the rim of the paper cup folded to a point. It </span>threw me <span class="mainpost1hidden">off so much that I just stopped talking and walked </span>away.<span class="mainpost1hidden"> #AwkwardMoment</span></p>
