--- a/click-click/page17.html
+++ b/click-click/page17.html
@@ -14,7 +14,7 @@
   <a href="page16.html" class="arrowup">&#8896;</a> 
   <a href="page18.html" class="arrowdown">&#8897;</a>
 
-    <h1 class="authormainpost1">Cathreen Davies</h1>
+    <a href="https://twitter.com/CathreenDavies" class="authormainpost1">Cathreen Davies</a>
     <h2 class="usernamemainpost7">@CathreenDavies</h2>
     <h3 class="datemainpost1">Dec 7</h3>
     <p class="mainpost1">
