--- a/click-click/page19.html
+++ b/click-click/page19.html
@@ -12,7 +12,7 @@
 <body>
   <a href="index.html" class="home">#AwkwardMoment</a>  
   <a href="page17.html" class="arrowup">&#8896;</a> 
-    <h1 class="authormainpost1">Celina</h1>
+    <a href="https://twitter.com/CeliBunneh" class="authormainpost1"> Celina</a>
     <h2 class="usernamemainpost2">@CeliBunneh</h2>
     <h3 class="datemainpost1">Nov 29</h3>
     <p class="mainpost1">
