Added Links And Created SVG Icons

--- a/coding-from-life-archive/index.html
+++ b/coding-from-life-archive/index.html
@@ -14,6 +14,7 @@
 	<div id="wrapper">
     <div class="home">CODING FROM LIFE</div>
     <a href="threeimensionpage2.html">
+      <p class="three">three-dimensional</p>
       <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 55.97 56.03"><defs><style>.cls-1,.cls-2,.cls-3,.cls-4{fill:none;stroke:white;stroke-miterlimit:10;}.cls-1{stroke-width:0.95px;}.cls-2,.cls-3,.cls-4{stroke-width:0.95px;}.cls-3{stroke-dasharray:1.39 1.39;}.cls-4{stroke-dasharray:1.36;}</style></defs><title>3d</title><polygon class="cls-1" points="0.47 43.6 27.99 55.32 27.99 19.26 0.47 9.46 0.47 43.6"/><polygon class="cls-1" points="55.5 43.6 27.98 55.32 27.98 19.26 55.5 9.46 55.5 43.6"/><polyline class="cls-1" points="0.47 9.19 27.81 0.5 55.5 9.19"/><line class="cls-2" x1="0.47" y1="43.6" x2="1.11" y2="43.37"/><polyline class="cls-3" points="2.42 42.9 27.55 33.82 54.2 43.15"/><line class="cls-2" x1="54.86" y1="43.37" x2="55.5" y2="43.6"/><line class="cls-4" x1="27.81" y1="0.5" x2="27.55" y2="33.82"/></svg>
     </a>
 <!--     <div class="threedimension">
@@ -25,6 +26,7 @@
       </a>
     </div> -->
     <a href="twodimensionpage2.html"><div class="twodimension">
+      <img class="layer13" src="./img/9.svg">
     </div>
     <p class="two">two-dimensional</p>
     </a>
