--- a/coding-from-life-archive/twodimensionpage2.html
+++ b/coding-from-life-archive/twodimensionpage2.html
@@ -13,10 +13,23 @@
 <body>
 	<div id="wrapper">
      <a href="index.html"><div class="home">CODING FROM LIFE</div></a>
-      <div class="top2"></div>
-      <div class="front"></div>
-      <div class="side"></div>
- 
+      <div class="top2">
+        <p class="top view">TOP VIEW</p>
+        <svg id="Layer_11" data-name="Layer 11" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 116.63 51.4"><defs><style>.cls-1{fill:none;stroke:#fff;stroke-miterlimit:10;stroke-width:3.11px;}</style></defs><title>9</title><polygon class="cls-1" points="115.07 49.84 1.55 49.76 1.55 1.7 115.07 1.56 115.07 49.84"/></svg>
+      </div>
+      <div class="front">
+        <p class="front view">FRONT VIEW</p>
+        <svg id="Layer_10" data-name="Layer 10" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 116.63 51.4"><defs><style>.cls-1{fill:none;stroke:#fff;stroke-miterlimit:10;stroke-width:3.11px;}</style></defs><title>9</title><polygon class="cls-1" points="115.07 49.84 1.55 49.76 1.55 1.7 115.07 1.56 115.07 49.84"/></svg>
+      </div>
+      <div class="side">
+        <p class="side view">SIDE VIEW</p>
+        <svg id="Layer_12" data-name="Layer 12" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 46.84 50.25"><defs><style>.cls-1{fill:none;stroke:#fff;stroke-miterlimit:10;stroke-width:1.96px;}</style></defs><title>9</title><polygon class="cls-1" points="45.86 49.27 0.98 49.18 0.98 1.12 45.86 0.98 45.86 49.27"/></svg>
+      </div>
+      <a href="https://leej312.github.io/Project_Lab/coding-from-life/sketch-2/index.html"><p class="jahyun names">jahyun lee</p></a>
+      <a href="https://seowxx.github.io/4_coding-from-life/sketch-2/index.html"><p class="seowon names">seowon kim</p></a>
+      <a href="https://kims889.github.io/coding-from-life/sketch-2/index.html"><p class="soyeon names">soyeon kim</p></a>
+      <a href="https://esragumrukculer.github.io/coding-from-life/sketch-2/index.html"><p class="esra names">esra gumrukculer</p></a>
+      <a href="https://privv824.github.io/coding-from-life/sketch-2/index.html"><p class="vinny names">vincent privitera</p></a>
 	</div>
 </body>
 </html>
