--- a/coding-from-life-archive/index.html
+++ b/coding-from-life-archive/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-  <title>Our Journeys</title>
+  <title>Coding From Life</title>
   	<meta charset="utf-8">  
     <link href='./css/reset.css' media='all' rel='stylesheet' type='text/css' />
     <link href='./css/main.css' media='all' rel='stylesheet' type='text/css' />
