Added Missing People Link

--- a/coding-from-life-archive/index.html
+++ b/coding-from-life-archive/index.html
@@ -30,6 +30,9 @@
     </div>
     <p class="two">two-dimensional</p>
     </a>
+    <a href="nodimension.html">
+      <p class="no">no dimension</p>
+    </a>
 	</div>
 </body>
 </html>
